fix link-secondary button on mobile

--- a/styles.css
+++ b/styles.css
@@ -190,4 +190,8 @@ hr {
         display: block;
         padding-inline-start: 0px;
     }
+
+    li .link-secondary {
+        display: table;
+    }
 }
